--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-
+<div class="Header"></div>
+<div class="text&image"></div>
+<div class="itempres"></div>
+<div class="quote"></div>
+<div class="bigsignup"></div>
+<div class="footer"></div>
     
 </body>
 </html>
