Adding initial elements to Header div of index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-<div class="Header"></div>
+<div class="Header">
+    <a href="#">Logo</a>
+    <!--This is a logo placeholder-->
+    <div class="pagelinks">
+        <a href="#">link number one</a>
+        <a href="#">link number two</a>
+        <a href="#">link number three</a>
+    </div>
+</div>
 <div class="text&image"></div>
 <div class="itempres"></div>
 <div class="quote"></div>
