--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,7 +18,8 @@
         <a href="#">link number three</a>
     </div>
 </div>
-<div class="text&image"></div>
+<div class="text&image">
+</div>
 <div class="itempres"></div>
 <div class="quote"></div>
 <div class="bigsignup"></div>
