fixing css link and adding basic style to elements through style.css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-
 <div class="Header">
-    <a href="#">Logo</a>
+    <a href="#" id="logo">Logo</a>
     <!--This is a logo placeholder-->
     <div class="pagelinks">
         <a href="#">link number one</a>
@@ -24,6 +23,5 @@
 <div class="quote"></div>
 <div class="bigsignup"></div>
 <div class="footer"></div>
-    
 </body>
 </html>
