inserting link class index.html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <div class="Header">
     <a href="#" id="logo">Logo</a>
     <!--This is a logo placeholder-->
-    <div class="pagelinks">
-        <a href="#">link number one</a>
-        <a href="#">link number two</a>
-        <a href="#">link number three</a>
+    <div id="pagelinks">
+        <a href="#" class="headerlinks">link number one</a>
+        <a href="#" class="headerlinks">link number two</a>
+        <a href="#" class="headerlinks">link number three</a>
     </div>
 </div>
 <div class="text&image">
