Adding changes to the header section in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="Header">
     <a href="#" id="logo">Logo</a>
     <!--This is a logo placeholder-->
-    <div id="pagelinks">
+    <div>
         <a href="#" class="headerlinks">link number one</a>
         <a href="#" class="headerlinks">link number two</a>
         <a href="#" class="headerlinks">link number three</a>
