Separating divisions within text&image div

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </div>
 </div>
 <div class="text&image">
+    <div class="item1"></div>
+    <div class="item2"></div>
 </div>
 <div class="itempres"></div>
 <div class="quote"></div>
