Separating divisions within text&image div

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
         <a href="#" class="headerlinks">link number three</a>
     </div>
 </div>
-<div class="text&image">
-    <div class="item1"></div>
+<div class="textandimage">
+    <div class="item1">
+        <h1 id="awesome">This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title.Its a smaller font and the color is lower contrast</p>
+        <button>Sign up</button>
+    </div>
     <div class="item2"></div>
 </div>
 <div class="itempres"></div>
