--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <p>This website has some subtext that goes here under the main title.Its a smaller font and the color is lower contrast</p>
         <button>Sign up</button>
     </div>
-    <div class="item2"></div>
+    <div class="item2">
+        <img src="" alt="This is a placeholder for an image">
+    </div>
 </div>
 <div class="itempres"></div>
 <div class="quote"></div>
