--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button>Sign up</button>
     </div>
     <div class="item2">
-        <img src="" alt="This is a placeholder for an image">
+        <img src="./images/room.jpg" alt="This is a placeholder for an image">
     </div>
 </div>
 <div class="itempres"></div>
