Base of itempres div

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
         <img src="./images/room.jpg" alt="This is a placeholder for an image">
     </div>
 </div>
-<div class="itempres"></div>
+<div class="itempres">
+    <div class="inf"></div>
+    <div class="inf"></div>
+    <div class="inf"></div>
+    <div class="inf"></div>
+</div>
 <div class="quote"></div>
 <div class="bigsignup"></div>
 <div class="footer"></div>
