Filling up empty space in itempres div

--- a/index.html
+++ b/index.html
@@ -28,10 +28,22 @@
     </div>
 </div>
 <div class="itempres">
-    <div class="inf"></div>
-    <div class="inf"></div>
-    <div class="inf"></div>
-    <div class="inf"></div>
+    <div class="inf">
+        <div class="blue-box"></div>
+        <p>Lorem ipsum bla bla bla this is a placeholder text</p>
+    </div>
+    <div class="inf">
+        <div class="blue-box"></div>
+        <p>Lorem ipsum bla bla bla this is a placeholder text</p>
+    </div>
+    <div class="inf">
+        <div class="blue-box"></div>
+        <p>Lorem ipsum bla bla bla this is a placeholder text</p>
+    </div>
+    <div class="inf">
+        <div class="blue-box"></div>
+        <p>Lorem ipsum bla bla bla this is a placeholder text</p>
+    </div>
 </div>
 <div class="quote"></div>
 <div class="bigsignup"></div>
