--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
         <p>Lorem ipsum bla bla bla this is a placeholder text</p>
     </div>
 </div>
-<div class="quote"></div>
+<div class="quote">
+    <p>“Your mind will take the shape of what you frequently hold in thought, for the human spirit is colored by such impressions.” </p>
+    <h1>– Marcus Aurelius</h1>
+</div>
 <div class="bigsignup"></div>
 <div class="footer"></div>
 </body>
