--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
 <div class="quote">
     <p>“Your mind will take the shape of what you frequently hold in thought, for the human spirit is colored by such impressions.” </p>
-    <h1>– Marcus Aurelius</h1>
+    <p>– Marcus Aurelius</p>
 </div>
 <div class="bigsignup"></div>
 <div class="footer"></div>
