--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
         <p id="quote">“Your mind will take the shape of what you frequently hold in thought, for the human spirit is colored by such impressions.” </p>
         <p id="person">– Marcus Aurelius</p>
 </div>
-<div class="bigsignup"></div>
+<div class="bigsignup">
+    <div>
+        <h1>Call to action! Its time!</h1>
+        <p>Sign up for our product by clicking that button over there!</p>
+    </div>
+    <div id="secsignup">
+        <button>Sign up</button>
+    </div>
+</div>
 <div class="footer"></div>
 </body>
 </html>
