Adding new secton to the index.html

--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
         <p id="person">– Marcus Aurelius</p>
 </div>
 <div class="bigsignup">
-    <div>
-        <h1>Call to action! Its time!</h1>
-        <p>Sign up for our product by clicking that button over there!</p>
-    </div>
-    <div id="secsignup">
-        <button>Sign up</button>
+    <div id="bigbluebox">
+        <div>
+            <h1>Call to action! Its time!</h1>
+            <p>Sign up for our product by clicking that button over there!</p>
+        </div>
+        <div id="secsignup">
+            <button>Sign up</button>
+        </div>
     </div>
 </div>
 <div class="footer"></div>
