Adding new secton to the index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
 <div class="bigsignup">
     <div id="bigbluebox">
-        <div>
+        <div id="textblock">
             <h1>Call to action! Its time!</h1>
             <p>Sign up for our product by clicking that button over there!</p>
         </div>
